--- a/novify-api/.env.example
+++ b/novify-api/.env.example
@@ -63,3 +63,8 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+EGO_SMS_API_URL=https://www.egosms.co/api/v1/json/
+EGO_SMS_USERNAME=your_username
+EGO_SMS_PASSWORD=your_password
+EGO_SMS_SENDER_ID=your_sender
